website/css/style.css
@charset "UTF-8";

/* Rajdhani font import */
@import url('https://fonts.googleapis.com/css?family=Rajdhani:400,600');
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');

/* Page reset */
*, *::after, *::before {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Rajdhani', sans-serif;
    color: white;
    position: relative;
}

/* Font sizes */
h1 {font-size:4.5rem; text-align: center;}
p {font-size:3rem;}

/* Utils */
.highlight {
    font-weight: 600;
}

.logo {
    width: 100%;
    height: 100%;
}

.content {
    width: 100%;
    min-height: 100vh;
    padding: 2.5%;
}

.content h1 {
    margin-bottom: 10px;
}

.content p {
    max-width: 80%;
    margin-left: auto;
    margin-right: auto;
}

/* Presentation */
#splay-presentation {
    background-image: linear-gradient(to bottom, #FCB841, #E56D1B);
}

#splay-presentation .container {
    width: 100%;
}

#splay-presentation .container img {
    width: 100%;
}

.img-presentation {
    box-shadow: -5px 15px 10px #F8661C;
}

/* Video Structures */
#splay-video-structures {
    display: flex;
    flex-flow: column;
    width: 100%;
    background: #ffffff;
}

.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    width: 100%;
}

#splay-video-structures h2 {
    display: block;
    background-color: #FABB34;
    font-size: 24px;
    width: 240px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    padding: 12px;
    border-radius: 9999px;
    z-index: 1;
}

#splay-video-structures span {
    width: 2px;
    height: 80px;
    margin: -30px auto;
    background-color: #662D90;
}

.container img {
    flex-basis: 400px;
    width: 400px;
    margin: 10px;
}

#splay-video-structures h1, #splay-team h1{
    color: #662D90;
}

/* Differentials */
#splay-differentials {
    width: 100%;
    background: #321b50;
}

#splay-differentials .container {
    margin: 50px auto;
    width: 100% !important;
}

#splay-differentials .container img {
    flex-basis: 300px !important;
    width: 300px !important;
    transition: transform .2s;
}

#splay-differentials .container img:hover {
    transform: scale(1.1);
}

#splay-differentials h1 {
    color: #FFB933;
}

#splay-differentials #image-description {
    display: flex;
    flex-flow: column;
}

#splay-differentials #image-description h3 {
    color: #FFB933;
    font-size: 3.5em;
    font-weight: 600;
    font-variant: small-caps;
    font-family: 'Open Sans', sans-serif;
}

#splay-differentials #image-description p {
    font-size: 2.5em;
}

#splay-differentials #image-description * {
    margin-left: auto;
    margin-right: auto;
}

/* Universe */
#splay-universe {
    width: 100%;
    background-image: linear-gradient(to top, #FCB841, #E56D1B);
}

#splay-universe .content {
    padding: 0;
}

.splay-universe div img {
    width: 100%;
    height: 100%;
}

/* Team */
#splay-team {
    color: #662D90;
}

/* Media Queries */
@media only screen and (max-width: 650px) {
    h1 {font-size:3.5rem !important;}
    p {font-size:2rem !important;;}
}

